CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(skiena)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++11 -W -Wall -g")

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/structures")

FILE(GLOB TEST_SOURCES "./tests/*.cpp")
ADD_EXECUTABLE(unit_test "${TEST_SOURCES}")

ENABLE_TESTING()
ADD_TEST(NAME unit_test COMMAND unit_test)
